--- a/src/style/global.css
+++ b/src/style/global.css
@@ -7,3 +7,160 @@
     font-family: Pretendard, system-ui, sans-serif;
   }
 }
+
+h1 {
+  font-size: 5rem;
+  line-height: 1.1;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3,
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.3rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+}
+
+ol,
+ul,
+p {
+  font-size: 1.1rem;
+}
+
+@media screen and (max-width: 960px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  h4 {
+    font-size: 1.5rem;
+  }
+}
+
+.row {
+  position: relative;
+  background-color: white;
+  padding: 3rem 0;
+  display: flex;
+}
+
+.other {
+  position: relative;
+  background-color: white;
+  padding: 3rem 0;
+}
+
+.line-seperator {
+  width: 100%;
+  height: 1px;
+}
+
+.row-left {
+  -ms-flex-preferred-size: 18rem;
+  flex-basis: 18rem;
+  padding-right: 1rem;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+
+.row-right {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+}
+
+.project,
+.other-item {
+  padding: 1.5rem 0;
+}
+
+.skill .other-item {
+  padding-top: 0;
+}
+
+.project:first-child {
+  padding-top: 0;
+}
+
+.project-title {
+  margin-bottom: 1.5rem;
+}
+
+.info {
+  color: #222;
+}
+
+.info h3,
+.info h4,
+.info h5 {
+  margin-bottom: 0.5rem;
+}
+
+.info ol,
+.info ul {
+  /* list-style: disc; */
+  padding-left: 1rem;
+  position: relative;
+}
+
+.info li {
+  padding: 0.2rem 0 0.2rem 0.2rem;
+}
+
+.info li:before {
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  content: "•";
+  color: #3a7bd5;
+}
+
+.period-mark {
+  color: #3a7bd5;
+}
+
+.big-paragraph {
+  font-size: 2rem;
+  line-height: 1.4;
+  font-weight: 500;
+}
+
+.project > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+@media screen and (max-width: 960px) {
+  .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .row-left {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    padding-right: 0;
+    padding-bottom: 1rem;
+  }
+
+  .big-paragraph {
+    font-size: 1.5rem;
+  }
+}
