--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -1,79 +1,162 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 html {
-	scroll-behavior: smooth;
-	-webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
 }
 body {
-	height: auto !important;
-	line-height: 1;
-
-	max-width: 1920px;
-	margin: auto;
+  height: auto !important;
+  max-width: 1920px;
+  margin: auto;
 }
-ol, ul {
-	list-style: none;
+p,
+li {
+  line-height: 1.25;
 }
-img, video {
-	width: 100%;
-	max-width: 100%;
-	height: auto;
-	vertical-align: bottom;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+img,
+video {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  vertical-align: bottom;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 button {
-	padding: 0;
-	background: 0;
-	border: 0;
-	cursor: pointer;
+  padding: 0;
+  background: 0;
+  border: 0;
+  cursor: pointer;
 }
-button[type='submit']:disabled {
-	cursor: not-allowed !important;
-	background: #626262;
-	opacity: 1 !important;
+button[type="submit"]:disabled {
+  cursor: not-allowed !important;
+  background: #626262;
+  opacity: 1 !important;
 }
 div {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 label {
-	cursor: pointer;
+  cursor: pointer;
 }
 a {
-	color: var(--pivoRedColor);
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 h1,
@@ -89,6 +172,14 @@ h5,
 .h5,
 * {
   letter-spacing: 0 !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 600;
 }
 /* a:not(.dawn-btn)::after {
   display: inline-block;
