--- a/src/style/global.css
+++ b/src/style/global.css
@@ -8,6 +8,36 @@
   }
 }
 
+/* contrast animation */
+body {
+  --text-color-value: 0, 0, 0;
+  --background-color-value: 255, 255, 255;
+  --text-color: rgb(var(--text-color-value));
+  --copy-color: rgba(var(--text-color-value), 0.8);
+  --nav-color: rgba(var(--text-color-value), 0.5);
+  --background-color: rgb(var(--background-color-value));
+
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: auto;
+  z-index: 10;
+  color: var(--nav-color);
+  background-color: rgba(var(--background-color-value), 0.8);
+  /* background-color: rgb(0 0 0 / 0.8); */
+  backdrop-filter: blur(20px) saturate(180%);
+}
+
+.panel {
+  background-color: var(--background-color);
+}
+
 h1 {
   font-size: 5rem;
   line-height: 1.1;
@@ -32,7 +62,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: black;
+  color: var(--text-color);
 }
 
 ol,
@@ -53,15 +83,29 @@ p {
 
 .row {
   position: relative;
-  background-color: white;
+  background-color: var(--background-color);
   padding: 3rem 0;
   display: flex;
 }
 
 .other {
   position: relative;
-  background-color: white;
+  background-color: var(--background-color);
   padding: 3rem 0;
+}
+
+.line-seperator-gradient {
+  background-image: radial-gradient(closest-side, #d2d2d7, transparent);
+}
+
+.hero-logo-gradient {
+  background-image: linear-gradient(
+    90deg,
+    var(--background-color),
+    hsla(0, 0%, 100%, 0) 20%,
+    hsla(0, 0%, 100%, 0) 80%,
+    var(--background-color)
+  );
 }
 
 .line-seperator {
@@ -101,7 +145,7 @@ p {
 }
 
 .info {
-  color: #222;
+  color: var(--copy-color);
 }
 
 .info h3,
@@ -126,11 +170,11 @@ p {
   left: 0;
   display: inline-block;
   content: "•";
-  color: #3a7bd5;
+  color: #006adc;
 }
 
 .period-mark {
-  color: #3a7bd5;
+  color: #006adc;
 }
 
 .big-paragraph {
@@ -196,18 +240,8 @@ p {
 }
 
 .text-color-animation {
-  background: linear-gradient(0deg, #11181c 20%, rgba(17, 24, 28, 0) 45%),
-    linear-gradient(
-      90deg,
-      #0f3058 0%,
-      #006adc 33.333%,
-      #11181c 50%,
-      #11181c 100%
-    );
-  background-size: 300% 100%;
-  background-repeat: no-repeat;
+  background: linear-gradient(90deg, #0ea5e9, #2943e8);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-position: 15% 0%;
 }
