--- a/src/style/global.css
+++ b/src/style/global.css
@@ -285,6 +285,10 @@ body {
   top: 0;
   left: 0;
   outline: none;
+  /* background-color: var(--text-color); */
+  background-color: var(--background-color);
+  width: 100%;
+  height: 100%;
 }
 
 .svg-wrapper {
