--- a/src/style/global.css
+++ b/src/style/global.css
@@ -286,9 +286,10 @@ body {
   left: 0;
   outline: none;
   /* background-color: var(--text-color); */
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 .svg-wrapper {
