--- a/src/style/global.css
+++ b/src/style/global.css
@@ -304,8 +304,15 @@ body {
   width: 100%;
   height: auto;
 
-  max-width: 500px;
+  min-width: 300px;
+  max-width: min(640px, 40%);
   overflow: unset;
+}
+
+@media (max-width: 750px) {
+  .svg-wrapper svg {
+    max-width: 80%;
+  }
 }
 
 .svg-wrapper svg path {
